# ShapeShifter

./: CMakeLists.txt  README.md
CMake/: CMakeCache.txt  Makefile  cmake_install.cmake
CMake/libraries/include/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
CMake/libraries/include/glfw/src/: Makefile  cmake_install.cmake
libraries/include/KHR/: LICENSE
libraries/include/glad/: glad.h
src/: glad.c  main.cpp
src/ImGui/: imgui_widgets.cpp  myImGuiTheme.h
src/camera/: camera.cpp  camera.h
src/ib/: ib.cpp  ib.h
src/lighting/: lighting.h
src/mat-vec/: mat-vec.cpp  mat-vec.h
src/renderer/: renderer.cpp  renderer.h
src/shader/: shader.cpp  shader.h
src/shaders/shape/: fragment.shader  vertex.shader
src/shapes/: shapes.cpp  shapes.h
src/va/: va.cpp  va.h
src/vb/: vb.cpp  vb.h
src/vbl/: vbl.cpp  vbl.h
src/window/: window.cpp  window.h
